<resources>
    <string name="app_name">CorreoDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="bje">Bandeja de entrada</string>
    <string name="bjs">Bandeja de salida</string>
    <string name="borrador">Borrador</string>
    <string name="send">send</string>
    <string name="about">about</string>
    <string name="body">body</string>
    <string name="Borrar">borrar</string>
    <string name="bd">bd</string>
    <string name="rv">rv</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="preferencias_PMDM_correo_file">PreferenciasPMDMCorreo</string>
    <string name="preferencias_email">email</string>
    <string name="preferencias_islogin">islogin</string>
</resources>