<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.correodrawer.ui.home.BandejaEntrada"
        android:label="@string/bje"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nuevo_correo"
            app:destination="@id/nuevo_correo" />
        <action
            android:id="@+id/action_nav_home_to_detalleBandejaEntrada"
            app:destination="@id/detalleBandejaEntrada" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.correodrawer.ui.gallery.BandejaSalida"
        android:label="@string/bjs"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.correodrawer.ui.slideshow.Borrador"
        android:label="@string/borrador"
        tools:layout="@layout/fragment_slideshow" >
        <action
            android:id="@+id/action_nav_slideshow_to_detalleborradorFragment"
            app:destination="@id/detalleborradorFragment" />
    </fragment>
    <fragment
        android:id="@+id/detalleborradorFragment"
        android:name="com.example.correodrawer.ui.borrador.detalleborradorFragment"
        android:label="detalleborradorFragment" >
        <action
            android:id="@+id/action_detalleborradorFragment_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
    </fragment>
    <fragment
        android:id="@+id/nuevo_correo"
        android:name="com.example.correodrawer.ui.borrador.nuevo_correo"
        android:label="nuevo_correo" >
        <action
            android:id="@+id/action_nuevo_correo_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/detalleBandejaEntrada"
        android:name="com.example.correodrawer.ui.borrador.detalleBandejaEntrada"
        android:label="detalleBandejaEntrada" >
        <action
            android:id="@+id/action_detalleBandejaEntrada_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>